<resources>
    <string name="app_name">GegeQuotes</string>
    <string name="error">You can\'t add an empty string</string>
    <string name="add_quote_hint">Enter your quote</string>
    <string name="add_button">Add</string>
    <string name="validate_btn">Confirm</string>
    <string name="cancel_btn">Cancel</string>
    <string name="connect_title">Log in</string>
    <string name="connect_username_title">Username</string>
    <string name="connect_username_hint">user: test, pwd: test</string>
    <string name="connect_password_title">Password</string>
    <string name="modified_rate">Rate Modified!</string>
    <string name="added_quote">Quote Added!</string>
    <string name="wrong_ids">Wrong userid or password</string>
    <string name="empty_ids">Empty userid or password</string>
    <string name="connected">Connected</string>
    <string-array name="quotes_array">
        <item>Il vaut mieux faire des conneries que s\'économiser. - Gerard Depardieu</item>
        <item>Aujourd\'hui, personne ne se distingue de rien, à commencer par les hommes politiques. Journalistes, acteurs, pareil. On ne vit pas dans un monde où l\'on peut se distinguer.</item>
        <item>Quand je voyage dans le monde, les gens retiennent surtout que j\'ai pissé dans un avion - Gerard Depardieu</item>
        <item>Vous savez que la mémoire d’un poisson est d\’une seconde seulement ? A force de regarder ces poissons rouges dans leur bocal, le téléspectateur devant son écran n\’a plus qu\’une seconde de mémoire lui aussi. - Gerard Depardieu</item>
        <item>Avant il y avait les mouches, maintenant il y a la télévision. - Gerard Depardieu</item>
        <item>La cérémonie des César, ça m\'a toujours fait chier - Gerard Depardieu</item>
        <item>Y\'a rien de plus chiant qu\'être acteur ! - Gerard Depardieu</item>
        <item>Les Lumières sont éteintes et ce n\'est pas avec les gens qui nous gouvernent qu\'on peut rallumer n\'importe quelle lampe - Gerard Depardieu</item>
    </string-array>
</resources>
