<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:paddingTop="30dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:textAlignment="center"
        android:textSize="30sp"
        android:padding="30dp"
        android:layout_gravity="center"
        android:text="@string/connect_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_weight="1"
            android:text="@string/connect_username_title"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/et_connect_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:inputType="text"
            android:hint="@string/connect_username_hint" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/connect_password_title"/>

        <EditText
            android:id="@+id/et_connect_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:inputType="textPassword"    />
    </LinearLayout>

    <Button
        android:id="@+id/bt_connect"
        android:layout_width="160dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/validate_btn" />

</LinearLayout>